[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/actors/Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/core/Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/core/Game.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/webpixel bitmap_regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://src/core/UI.gd" type="Script" id=5]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.866667, 0.737255, 0.486275, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 4 )

[node name="Game" type="Spatial"]
script = ExtResource( 3 )

[node name="Ball" parent="." instance=ExtResource( 1 )]

[node name="Walls" type="Spatial" parent="."]

[node name="Wall" parent="Walls" instance=ExtResource( 2 )]

[node name="Wall2" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, -2, -2 )

[node name="Wall3" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, -2, -4 )

[node name="Wall4" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -2, -2, -4 )

[node name="Wall5" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -4, -2, -4 )

[node name="Wall6" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -4, -2, -6 )

[node name="Wall7" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, -2, -6 )

[node name="Wall8" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -2, -2, -6 )

[node name="Wall9" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -2, -2, 0 )

[node name="Wall10" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -4, -2, 0 )

[node name="Wall11" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -4, -2, -2 )

[node name="Wall12" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -2, -2, -2 )

[node name="Wall13" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -4, -2, -8 )

[node name="Wall14" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -4, -2, -10 )

[node name="Wall15" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -6, -2, -10 )

[node name="Wall16" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -8, -2, -10 )

[node name="Wall17" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -8, -2, -12 )

[node name="Wall18" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -8, -2, -14 )

[node name="Wall19" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -10, -2, -14 )

[node name="Wall20" parent="Walls" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, -10, -2, -14 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -123.0
margin_right = 123.0
margin_bottom = 132.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI/VBoxContainer"]
visible = false
margin_right = 246.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscore" type="Label" parent="UI/VBoxContainer"]
margin_right = 246.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Highscore:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Advice" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.5
margin_top = -32.0
margin_right = 180.5
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Click to start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.5
margin_top = -27.0
margin_right = 220.5
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "CLICK HERE TO RESTART"
[connection signal="died" from="Ball" to="." method="_on_Ball_died"]
[connection signal="points_changed" from="Ball" to="UI" method="_on_Ball_points_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="UI/Advice" to="." method="_on_Advice_pressed"]
[connection signal="pressed" from="UI/RestartButton" to="." method="_on_RestartButton_pressed"]
